<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Manager</string>
    <string name="search_result_label">Task Manager - location search result</string>
    <string name="task_description">What Needs to Get Done?</string>
    <string name="search_location_description">Where it is going to take place?</string>
    <string name="search_no_results_found">No results were found for your search.</string>
    <string name="task_priority">Priority Task</string>
    <string name="task_date">Due Date</string>
    <string name="task_location">Location</string>
    <string name="date_empty">not set</string>
    <string name="detail_date_empty">Due date not set</string>
    <string name="location_empty">not set</string>
    <string name="detail_location_empty">Location not set</string>
    <string name="action_save">Save</string>
    <string name="action_set_location">Set location</string>
    <string name="action_search_location">Search location</string>
    <string name="action_reminder">Set Reminder</string>
    <string name="action_delete">Delete Task</string>
    <string name="settings">Settings</string>
    <string name="reminder_title">Task Reminder</string>
    <string name="past_reminder_scheduled">It is not possible to schedule a reminder in the past!</string>

    <string name="pref_sortOrderDialog_title">Sort Order</string>
    <string name="pref_sortBy_title">Sort By:</string>
    <string name="pref_sortBy_key" translatable="false">sort</string>
    <string name="pref_sortBy_default_label">Default</string>
    <string name="pref_sortBy_due_label">Due Date</string>
    <string name="pref_sortBy_default" translatable="false">default</string>
    <string name="pref_sortBy_due" translatable="false">due</string>

    <string name="pref_cleanupIntervalDialog_title">Cleanup \"done\" tasks interval</string>
    <string name="pref_cleanupInterval_title">Cleanup interval:</string>
    <string name="pref_cleanupInterval_key" translatable="false">cleanup</string>
    <string name="pref_cleanupInterval_default_label" translatable="false">Default</string>
    <string name="pref_cleanupInterval_long_label" translatable="false">Long</string>
    <string name="pref_cleanupInterval_short_label" translatable="false">Short</string>
    <string name="pref_cleanupInterval_default" translatable="false">default</string>
    <string name="pref_cleanupInterval_long" translatable="false">long</string>
    <string name="pref_cleanupInterval_short" translatable="false">short</string>

    <string name="fragment_main_tag">fragmentMainTAG</string>
    <string name="fragment_task_detail_tag">fragmentTaskDetailTAG</string>
    <string name="fragment_add_task_tag">fragmentAddTaskTAG</string>
    <string name="fragment_location_tag">fragmentLocationTAG</string>
    <string name="fragment_map_tag">fragmentMapTAG</string>

    <string name="task_list_detail_empty_view">There is no added tasks.</string>
    <string name="task_detail_empty_view">No selected task. Select a task from the Task List to see its details.</string>
    <string name="last_know_location_failed">It was not possible getting your last known location. </string>
    <string name="location_not_set_on_map">Location was not set on map. Try clicking on \'My location\' option or use the search</string>
    <string name="google_services_error">Google Services is not available. Try to update your device.</string>
    <string name="connectivity_error">Ops&#8230; Something went wrong. Check your connection and try again.</string>
    <string name="task_location_map_marker">Task location</string>
    <string name="fragment_callback_not_implemented">You must implement %s in order to attach this fragment!</string>

    <string name="widget_label">Task Manager</string>
    <string name="widget_description">Lists tasks that are expired or about to expire in the current day.</string>
    <string name="widget_title">About to expire</string>
    <string name="widget_no_data_available">no tasks available</string>

    <string name="content_description_last_know_location">set on the map your last know location</string>
    <string name="content_description_add_task">add a new task</string>
    <string name="content_description_check_task_as_done">task done</string>
    <string name="content_description_priority_task">it is a priority task</string>
    <string name="content_description_not_priority_task">it is not a priority task</string>
    <string name="content_description_widget_title">Task manager widget, tasks about to expire</string>

</resources>
