<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_sortBy_default"
        android:dialogTitle="@string/pref_sortOrderDialog_title"
        android:entries="@array/pref_sortBy_entries"
        android:entryValues="@array/pref_sortBy_values"
        android:key="@string/pref_sortBy_key"
        android:title="@string/pref_sortBy_title" />

    <ListPreference
        android:defaultValue="@string/pref_cleanupInterval_default"
        android:dialogTitle="@string/pref_cleanupIntervalDialog_title"
        android:entries="@array/pref_cleanupInterval_entries"
        android:entryValues="@array/pref_cleanupInterval_values"
        android:key="@string/pref_cleanupInterval_key"
        android:title="@string/pref_cleanupInterval_title" />

</PreferenceScreen>