<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.fabriciosuarte.taskmanager.AddTaskActivity">

    <android.support.design.widget.TextInputLayout
        style="@style/input_view"
        android:id="@+id/text_wrapper_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium">
        <android.support.design.widget.TextInputEditText
            style="@style/input_view"
            android:id="@+id/text_input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description"
            android:contentDescription="@string/task_description"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.SwitchCompat
        style="@style/input_view"
        android:id="@+id/switch_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/text_wrapper_description"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/task_priority"/>

    <TextView
        style="@style/input_view"
        android:id="@+id/label_date"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_box_height"
        android:layout_below="@id/switch_priority"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:contentDescription="@null"
        android:labelFor="@+id/text_date"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/task_date"/>

    <TextView
        style="@style/input_view"
        android:id="@+id/text_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_box_height"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/label_date"
        android:layout_alignBaseline="@id/label_date"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:gravity="end"
        tools:text="not set"/>

    <TextView
        style="@style/input_view"
        android:id="@+id/label_location"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_box_height"
        android:layout_below="@id/label_date"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:labelFor="@+id/text_location"
        android:gravity="center_vertical"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/task_location"/>

    <TextView
        style="@style/input_view"
        android:id="@+id/text_location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_box_height"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/label_date"
        android:layout_alignBaseline="@id/label_location"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:gravity="end"
        tools:text="not set"/>
</RelativeLayout>
